--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>请点击右上角...</p>
         <p>选择“在默认浏览器中打开”</p>
         <p>打不开请挂v</p>
-        <img src="https://liqun.neocities.org/74005c6fe92e8ea9778627161684f36.jpg" alt="引导图片">
+        <img src="https://cdn.jsdelivr.net/gh/xaower/dingyue.gihub.io@3f98e082f49b7cdb41aaa0b41f949c74b84d9381/74005c6fe92e8ea9778627161684f36.jpg" alt="引导图片">
     </div>
 
     <script>
