--- a/jd.html
+++ b/jd.html
@@ -47,7 +47,7 @@
         <h1>请在浏览器中打开此页面↗</h1>
         <p>👉请点击右上角... 然后选择“在默认浏览器中打开"👈</p >
         <p>👉或者复制下方链接到浏览器打开👈</p >
-        <p>https://liqun.neocities.org</p > <!-- 替换为你要跳转的目标网址 -->
+        <p>https://xaower.github.io/dingyue/</p > <!-- 替换为你要跳转的目标网址 -->
     </div>
 
     <div id="content" class="content">
