--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
 							</li>
 							<li>
 								免费vpn订阅
-								<a href="https://liqun.neocities.org/dingyue" target="_blank"><i>https://liqun.neocities.org/dingyue</i></a>
+								<a href="https://xaower.github.io/dingyue/jd" target="_blank"><i>https://xaower.github.io/dingyue/jd</i></a>
 								</span></span>
 							</li>
          			<li>
