--- a/index.html
+++ b/index.html
@@ -561,17 +561,17 @@
 						<ul>
 							<li>
 								apple美区账号（如id被锁请点击邮件解锁）
-								<a href="https://appfx.top/share/fx" target="_blank"><i>https://appfx.top/share/fx</i></a>
+								<a href="https://appfx.top/share/fx" target="_blank"><i>点击访问</i></a>
 								</span></span>
 							</li>
 							<li>
 								免费vpn订阅
-								<a href="https://xaower.github.io/dingyue/jd" target="_blank"><i>https://xaower.github.io/dingyue/jd</i></a>
+								<a href="jd.html" target="_blank"><i>点击访问</i></a>
 								</span></span>
 							</li>
          			<li>
 								教程博客
-								<a href="https://www.168981.xyz" target="_blank"><i>https://www.168981.xyz</i></a>
+								<a href="https://www.168981.xyz" target="_blank"><i>点击访问</i></a>
 								</span></span>
 							</li>
 							<li>
