--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
 	<div id="all">
 		<div class="wrapper">
 			<div class="main">
-				<h1>Alejandro导航</h1>
+				<h1>精选导航</h1>
 				<div class="content">
 					<div class="content-top">
 						<h2>请 Ctrl+D 收藏本页到浏览器收藏夹</h2>
