--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
 								</span></span>
 							</li>
 							<li>
-								免费vpn订阅
+								免费订阅
 								<a href="jd.html" target="_blank"><i>点击访问</i></a>
 								</span></span>
 							</li>
