--- a/index.html
+++ b/index.html
@@ -574,6 +574,11 @@
 								<a href="https://www.168981.xyz" target="_blank"><i>点击访问</i></a>
 								</span></span>
 							</li>
+														<li>
+								测试
+								<a href="xhj.html" target="_blank"><i>点击访问</i></a>
+								</span></span>
+							</li>
 							<li>
 								<span>近期部分国产浏览器屏蔽网址<span>
 						</ul>
