--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <div id="weixin-tip">
         <p>请点击右上角...</p>
         <p>选择“在默认浏览器中打开”</p>
-        <p>打不开请挂v</p>
+        <p>打不开请切换网络</p>
+        <p>wifi?移动网络？🪜？</p>
         <img src="https://cdn.jsdelivr.net/gh/xaower/dingyue@9e7ada327cb97789118b72bb34b74de882c79c58/74005c6fe92e8ea9778627161684f36.jpg" alt="引导图片">
     </div>
 
@@ -554,28 +555,23 @@
 	<div id="all">
 		<div class="wrapper">
 			<div class="main">
-				<h1>精选导航</h1>
+				<h1>自用&收藏夹</h1>
 				<div class="content">
 					<div class="content-top">
 						<h2>请 Ctrl+D 收藏本页到浏览器收藏夹</h2>
 						<ul>
 							<li>
-								apple美区账号（如id被锁请点击邮件解锁）
+								apple美区账号（24小时自动解锁）
 								<a href="https://appfx.top/share/fx" target="_blank"><i>点击访问</i></a>
 								</span></span>
 							</li>
-							<li>
-								免费订阅
-								<a href="jd.html" target="_blank"><i>点击访问</i></a>
-								</span></span>
-							</li>
          			                        <li>
-								教程博客
+								其他网络资源  （自己搜集的资源）
 								<a href="https://www.168981.xyz" target="_blank"><i>点击访问</i></a>
 								</span></span>
 							</li>
 							<li>
-								<span>近期部分国产浏览器屏蔽网址<span>
+								<span>如网址打不开请切换网络<span>
 						</ul>
 
 					</div>
