--- a/index.html
+++ b/index.html
@@ -561,8 +561,13 @@
 						<h2>请 Ctrl+D 收藏本页到浏览器收藏夹</h2>
 						<ul>
 							<li>
-								apple美区账号（24小时自动解锁）
+								apple美区账号（家庭共享号失效中）
 								<a href="https://appfx.top/share/fx" target="_blank"><i>点击访问</i></a>
+								</span></span>
+							</li>
+							<li>
+								美区小火箭（直接搜索下载 仅付费🚀）
+								<a href="https://s.jiesuo.one/s/ee00090bf96c4af9aa3f06a181818496" target="_blank"><i>点击访问</i></a>
 								</span></span>
 							</li>
          			                        <li>
