--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
 								</span></span>
 							</li>
 							<li>
-								<span>如网址打不开请切换网络<span>
+								<p><span class="red-bold">共享账号请不要在设置里登入！！！</span></p>
 						</ul>
 
 					</div>
