--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
 								</span></span>
 							</li>
 							<li>
-								<p><span class="red-bold">共享账号请不要在设置里登入！！！</span></p>
+								<span style="color: red; font-weight: bold;">共享账号请不要在设置里登入！！！</span>
 						</ul>
 
 					</div>
